Fix: hero image too big

--- a/style.css
+++ b/style.css
@@ -1,64 +1,65 @@
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex: 1;
 }
 
 .hero-img {
-  display: block;
-  max-width: 1440px;
-  width: 1440px;
-  height: 300px;
-  object-fit: cover;
+	display: block;
+	max-width: 1440px;
+	width: 1440px;
+	height: 300px;
+	object-fit: cover;
 }
 
 #restaurant-header {
-  position: relative;
-  display: flex;
-  width: 1440px;
-  flex-direction: column;
-  align-items: center;
+	position: relative;
+	display: flex;
+	max-width: 1440px;
+	width: 100%;
+	flex-direction: column;
+	align-items: center;
 }
 
 .hero-wrapper {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  width: 100%;
+	display: flex;
+	justify-content: center;
+	position: relative;
+	width: 100%;
 }
 
 .restaurant-description {
-  display: flex;
-  padding: 64px 32px 0px 32px;
-  padding-top: 64px;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+	display: flex;
+	padding: 64px 32px 0px 32px;
+	padding-top: 64px;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
 }
 
 .logo {
-  position: absolute;
-  bottom: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  border: 4px solid white;
-  width: 100px;
-  height: 100px;
-  border-radius: 100%;
-  box-shadow:
-    0 8px 20px rgba(0, 0, 0, 0.18),
-    0 2px 6px rgba(0, 0, 0, 0.1);
+	position: absolute;
+	bottom: -50px;
+	left: 50%;
+	transform: translateX(-50%);
+	border: 4px solid white;
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	box-shadow:
+		0 8px 20px rgba(0, 0, 0, 0.18),
+		0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 1440px) {
-  .hero-img {
-    width: 100%;
-  }
+	.hero-img {
+		width: 100%;
+	}
 }
